--- a/view/bazar/css/bigpc.css
+++ b/view/bazar/css/bigpc.css
@@ -1,83 +1,17 @@
 /* bigpc (min-width:1400px) */
-header nav {margin-bottom: 30px;}
-h1 {font-size:5rem;margin-top:40px;}
-h2 {font-size:3rem; margin-top:10px;}
-#encabezado, #pie, article.spread p {font-size: 1.6rem; margin: 30px auto;}
-#prod-description {font-size: 1.4rem;}
-#proj-name span, #proj-name a {font-size: 0.9em;}
-section {margin: 0 30px;}
-
-article.header.prod {width: 50%;}
-article img.item {max-width: 360px;}
-
-div.caja {
-  height:80px;
-  min-width: 100px;
-}
-div.caja p.precio {
-  line-height:60px;
-  font-size: 2em;
-  padding: 0 20px;
-}
-
-
-div.formfields {width: 440px; margin-right: 30px;}
-
-div#fields-address,
-div#fields-investor,
-div#fields-friend {
-  float: left;
-}
-
-div#field-message,
-div#anonm {
-  clear: both;
-  width: 80%;
-}
-
-
-/*
-header {width:80%;height:250px;margin: 0 auto;}
-header.helemento{width:90%;height:150px;margin:auto;text-align:center;}
-img.logo {float:left;width:20%;margin-left:10%;}
-img.logoele {float:left;width:10%;margin-left:10%;}
-h1.ele{font-size:150%;text-align:center;margin:60px 0 0 80px;}
- #encabezado {width:90%;height:200px;float:left;font-size:1.50rem;padding-left:50px; }
-article.redes {;height:70px;float:left;text-align:left;padding-left:130px;margin-top:-100px;}
-img.face {width:15%;margin-left:20px;}
-img.twit {width:15%;}
-
-
-#caja{
-	float:left;
-	margin-top:180px;
-	margin-left:-240px;
-}
-
-article {display:inline-block;width:400px;height:250px;margin-top:50px;}
-article.elemento {display:inline-block;
-	width:60%;
-	height:300px;
-	margin-left:20px;
-	margin-top:20px;
-	margin-bottom:10px;}
-
-section#contenedor{clear:both;
-				 width:100%;
-				 margin-bottom:20px;
-}
-img {width:60%;float:left;}
-article img{width:60%;float:left;margin-top:30px;}
-article p.desc{width:50%;
-			text-align:center;
-			padding:10px 5px 20px 0px;
-			float:left;
-			margin-top:-250px;
-			margin-left:180px;
-			font-size:80%;}
-footer {width:100%;height:300px;}
-footer img.goteo {width:25%;height:300px;margin-left:35%;}
-#caja p.precio{
-	margin-top:-12px;
-}
-*/
+header nav{margin-bottom:30px;}
+h1{font-size:5rem;margin-top:40px;}
+h2{font-size:3rem;margin-top:10px;}
+#encabezado,#pie,article.spread p{font-size:1.6rem;margin:30px auto;}
+#prod-description{font-size:1.4rem;}
+#proj-name span,#proj-name a{font-size:0.9em;}
+section{margin:0 30px;}
+article.activable{max-width:20%;margin-right:55px;}
+article.activable img.item{max-width:360px;}
+article.header{width:45%;}
+article.header img.item{width:50%;}
+div.caja{height:80px;min-width:100px;}
+div.caja p.precio{line-height:60px;font-size:2em;padding:0 20px;}
+div.formfields{width:440px;margin-right:30px;}
+div#fields-address,div#fields-investor,div#fields-friend{float:left;}
+div#field-message,div#anonm{clear:both;width:80%;}
