--- a/view/bazar/css/tablet.css
+++ b/view/bazar/css/tablet.css
@@ -1,83 +1,14 @@
 /* Tablet (min-width:750px) and (max-width:1024px) */
-h1 {font-size:3rem; margin-top:20px;}
-h2 {font-size:2rem; margin-top:20px;}
-#encabezado, #pie, article.spread p  {font-size: 1.1rem; margin: 10px auto;}
-#prod-description {font-size: 1rem;}
-#proj-name span, #proj-name a {font-size: 0.8em;}
-
-article.header.prod {width: 50%;}
-article img.item {max-width: 200px;}
-
-div.formfields {width: 390px; margin-right: 20px;}
-
-ul.share li.facebook {margin: 0;}
-
-div#fields-address,
-div#fields-investor,
-div#fields-friend {
-  float: left;
-}
-
-div#field-message,
-div#anonm {
-  clear: both;
-  width: 80%;
-}
-
-
-/*
-body{width:100%;text-align:center;
-height:auto;margin:auto;}
-header {width:100%;height:250px;}
-img.logo {float:left;width:20%;margin-left:10%;}
-	h1.ele{font-size:150%;text-align:center;margin:60px 0 0 80px;}
-header.helemento{width:90%;height:150px;margin:auto;text-align:center;}
-img.logoele {float:left;width:10%;margin-left:10%;}
-header.helemento{width:90%;height:150px;margin:auto;text-align:center;}
- #encabezado {width:90%;height:200px;float:left;
-  font-size:1.20rem;padding-left:50px; }
-article.redes {;height:70px;float:left;text-align:left;padding-left:130px;margin-top:-120px;}
-img.face {width:15%;margin-left:20px;}
-img.twit {width:15%;}
-
-#caja{
-	float:left;
-	margin-top:120px;
-	margin-left:-160px;
-}
-
-#caja p.precio{
-	margin-top:-12px;
-
-
-article {display:inline-block;
-	width:40%;
-	height:200px;
-	margin-left:20px;
-	margin-top:50px;}
-article.elemento {display:inline-block;
-	width:60%;
-	height:300px;
-	margin-left:20px;
-	margin-top:20px;
-	margin-bottom:10px;}
-
-section#contenedor{clear:both;
-				 width:90%;
-				 margin:auto;
-				 
-}
-img {width:45%;
-	float:left;}
-article img{width:45%;
-		float:left;
-		margin-top:30px;}
-article p.desc{width:50%;
-			text-align:left;
-			padding:0px 0px 0px 0px;
-			float:left;
-			margin:40px 0px 0px 5px;
-			font-size:80%;}
-footer {width:100%;height:300px;}
-footer img.goteo {width:25%;height:300px;margin-left:35%;}
-*/
+h1{font-size:3rem;margin-top:20px;}
+h2{font-size:2rem;margin-top:20px;}
+#encabezado,#pie,article.spread p {font-size:1.1rem;margin:10px auto;}
+#prod-description{font-size:1rem;}
+#proj-name span,#proj-name a{font-size:0.8em;}
+article.activable{width:45%;margin-right:20px;}
+article.activable img.item{max-width:200px;}
+article.header{width:45%;}
+article.header img.item{width:40%;}
+div.formfields{width:390px;margin-right:20px;}
+ul.share li.facebook{margin:0;}
+div#fields-address,div#fields-investor,div#fields-friend{float:left;}
+div#field-message,div#anonm{clear:both;width:80%;}
