--- a/view/bazar/css/minimobile.css
+++ b/view/bazar/css/minimobile.css
@@ -1,7 +1,8 @@
 /* Minimobile (max-width:340px) */
 header,header nav{width:100%;}
 header nav{margin-bottom:3px;}
-header a.logo,footer a.logo{display:none;}
+header img.logo-goteo,header a.logo,footer a.logo{display:none;}
+h2{margin-top:0 !important;}
 footer section.logo2{display:inline-block;}
 section{margin:0 5px;}
 article.activable{margin:0;width:98%;}
