--- a/view/bazar/css/mobile.css
+++ b/view/bazar/css/mobile.css
@@ -1,7 +1,8 @@
 /* Mobile (min-width:340px) and (max-width:750px) */
 header,header nav{width:100%;}
 header nav{margin-bottom:5px;}
-header a.logo,footer a.logo {display: none;}
+header img.logo-goteo,header a.logo,footer a.logo {display: none;}
+h2{margin-top:0 !important;}
 footer section.logo2 {display: inline-block;}
 section {margin:0 10px;}
 article.activable{margin:0;width:98%;}
