--- a/view/bazar/css/pc.css
+++ b/view/bazar/css/pc.css
@@ -5,9 +5,10 @@ h2{font-size:2.5rem;margin-top:5px;}
 #encabezado,#pie,article.spread p{font-size:1.4rem;margin:25px auto;}
 #prod-description{font-size:1.2rem;}
 #proj-name span,#proj-name a{font-size:0.8em;}
-article.activable{max-width:30%;margin-right:45px;}
+article.activable{max-width:28%;margin-right:40px;}
 article.activable img.item{max-width:255px;}
 article.header{width:45%;}
+article.header.prod{padding-top: 40px;vertical-align: top;}
 article.header img.item{width:50%;}
 div.caja{height:70px;min-width:90px;}
 div.caja p.precio{line-height:55px;font-size:1.6em;padding:0 20px;}
