Reglas adicionales ancho menor de 400px

--- a/view/css/call/mobile.css
+++ b/view/css/call/mobile.css
@@ -73,3 +73,7 @@
             float:none;
             clear: both;
            }
+
+           #supporters-sponsors {
+            display: none;
+           }
