Modificaciones en fuentes. Nuevo módulo en versión tablet.

--- a/view/css/call/mobile.css
+++ b/view/css/call/mobile.css
@@ -19,6 +19,7 @@
             float:none;
             clear: both;
             padding: 15%;
+            font-size: 19px;
            }
 
            #banners-social {
