--- a/view/css/call/tablet.css
+++ b/view/css/call/tablet.css
@@ -1,78 +1,62 @@
 /* Tablet (min-width:400px max-width:600px) */
-#header, #footer {display:none;}
-           
-div#main {
-     width: 100%;
-     margin: 0;
-}
+            #header, #footer {display:none;}
+                       
+            div#main {
+                 width: 100%;
+                 margin: 0;
+            }
 
- #title img.logo {
-    width:32.4675%;
-         }
-  
- #title h2.title {
-    width: 64.935%;
-    padding-top: 2%;
-         }
+             #title img.logo {
+                width:32.4675%;
+                     }
+              
+             #title h2.title {
+                width: 64.935%;
+                padding-top: 2%;
+                     }
 
-#banners-social {
-    width: 100%;
-         }
+            #banners-social, div#banners-social div#call-banners, div#banners-social div#call-banners div.call-banners-container, #info,  #project-list, #supporters-sponsors, #call-supporters,  #content, #stats  {
+                width: 100%;
+                     }
 
-div#banners-social div#call-banners {
-            width:100%;
-           }
+            div.call-banners-container div.call-banner {
+                        width:100%;
+                        background-image: none !important;
+                        left:0px !important;
+                        margin-left: 15%;
+                        margin-right: 15%;
+                       }
 
-div#banners-social div#call-banners div.call-banners-container {
-            width:100%;
-           }
-div.call-banners-container div.call-banner {
-            width:100%;
+            div.call-banners-container div.call-banner > div.title {
+                        width:70%;
+                        margin-left: 22%;
+                        max-width: 400px;
+                       }
+            #social {
+              display:none;
+            }
 
-           }
 
-div.call-banners-container div.call-banner > div.title {
-            width:70%;
-            margin-left: 22%;
-           }
-#social {
-  display:none;
-}
+            .projects #content {
+                        width:100%;
+                        float:none;
+                        clear: both;
+                  }
 
-#info {
-            width:100%;
-      }
-
-.projects #content {
-            width:100%;
-            float:none;
-            clear: both;
-      }
-
- #project-list {
-            width: 100%
-      }
- #project-list li {
-            width:28%;
-      }
-           
- div#side {
-            display:none;
-            float:none;
-            clear: both;
-      }
-
-  #supporters-sponsors {
-            width:100%;
-           }
-
-           #call-supporters {
-            width: 100%;
-           }
+             #project-list li {
+                        width:28%;
+                  }
+                       
+             div#side {
+                        display:none;
+                        float:none;
+                        clear: both;
+                  }
 
            #supporters-sponsors #post {
             width:96.6%;
             padding: 2% 0 0 2%;
+            max-width: 450px;
            }
 
           #supporters-sponsors #post div.image {
@@ -87,7 +71,19 @@ div.call-banners-container div.call-banner > div.title {
             width:54%;
             margin-left: 2.5%;
            }
-           #sponsors {
+           #sponsors, #supporters-sponsors #post div.read_more {
             display:none;
            }
-  
+
+           #stats dl.long, #stats dl.category {
+            width:30%;
+           }
+
+           #stats dl.block.selected, #stats dl.block.processing, #stats dl.block.success, dl.block.last.return {
+            width:22%;
+           }
+
+           .freetext {
+            margin-right: 5%;
+           }
+           
