--- a/view/css/home.css
+++ b/view/css/home.css
@@ -1,198 +1,14 @@
 @import url("project/widget/projects.css");
-
-body.home div#main div.learn {    
-    margin-bottom: 16px;
-    position: relative;
-}
-
-body.home div#main div.widget.projects h2.title {
-	margin-left:-47px;
-}
-/* Especial pagina vip */
-body.home div#main div.widget.projects.patron_invests h2.title {
-	margin-left:-15px !important;
-}
-
-body.home div#main div.widget.projects h3.title{
-	margin-left:3px;
-}
-
-body.home div#main div.widget.projects{
-	padding:15px 0 0 75px;	
-}
-/* Especial pagina vip */
-body.home div#main div.widget.projects.patron_invests{
-	padding: 15px !important;
-    margin: 0 0 15px 0 !important;
-}
-
-body.home div#main div.widget.projects div.widget.project{
-	padding:0;
-	margin: 0 40px 42px 0;
-}
-/* Especial pagina vip */
-body.home div#main div.widget.projects.patron_invests div.widget.project{
-	margin: 0 0 20px 30px !important;
-}
-
-/* Estilos para entradas de blog en portada,
- Se añaden reglas para usarlos en la portada de nodo
- Los que no sean identicos en la portada de nodo no se les pone la regla y se definen en /view/css/node/home.css
-*/
-body.node.home div#node-news ul.slderpag,
-body.home div#main div.learn ul.slderpag {
-    margin: 8px 0 0 0;
-	list-style:none;
-	padding:0px;
-	float:left;
-	height:auto;
-}
-
-body.node.home div#node-news ul.slderpag li,
-body.home div#main div.learn ul.slderpag li {
-    cursor:pointer;
-    display: block;
-    float: left;
-    overflow: hidden;
-	margin: 0px 4px 5px 4px;
-}
-
-body.node.home div#node-news ul.slderpag li a,
-body.home div#main div.learn ul.slderpag li a {
-    width: 12px;
-    height: 6px;
-    margin-top: 2px;
-    background-color: #cdcdce;
-    color: #cdcdce;
-	display:block;
-}
-
-body.node.home div#node-news ul.slderpag li a:hover,
-body.home div#main div.learn ul.slderpag li a:hover {
-    background-color: #20b3b2;
-    color: #20b3b2;
-}
-
-body.node.home div#node-news ul.slderpag li.current a,
-body.home div#main div.learn ul.slderpag li.current a {
-    background-color: #808184 !important;
-    color: #808184 !important;
-}
-
-body.node.home div#node-news a.next,
-body.node.home div#node-news a.prev,
-body.home div#main div.learn a.next,
-body.home div#main div.learn a.prev {
-    width: 16px;
-    height: 16px;
-	line-height: 2000px;
-	overflow: hidden;
-	float:left;
-	margin: 9px 0 0 0;
-	cursor:pointer;
-/*	display: inline-block; */
-}
-
-body.node.home div#node-news a.prev,
-body.home div#main div.learn a.prev {
-	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
-}
-
-body.node.home div#node-news a.prev:hover,
-body.home div#main div.learn a.prev:hover {
-	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
-}
-
-body.node.home div#node-news a.next,
-body.home div#main div.learn a.next{
-	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
-}
-
-body.node.home div#node-news a.next:hover,
-body.home div#main div.learn a.next:hover {
-	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
-}
-
-body.home div#main div.learn div.slder_container,
-body.home div#main div.learn  div.slder_container div.slder_slide {
-    width:900px;
-	height:290px;
-	display:block;
-}
-
-body.node.home div#node-news  div.slder_container div.slder_slide . div.post,
-body.home div#main div.learn  div.slder_container div.slder_slide . div.post {
-    position: relative;
-    min-height: 305px;
-    padding-left: 520px;
-    display: none;
-}
-
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.read_more {
-    bottom: 10px;
-    right: 20px;
-    position: absolute;
-}
-
-body.node.home div#node-news div.slder_container div.slder_slide div.post h3,
-body.node.home div#node-news div.slder_container div.slder_slide div.post div.description,
-body.home div#main div.learn div.slder_container div.slder_slide div.post h3,
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.description {
-	float: left;
-    margin: 0 0 10px 20px;
-    width: 380px;
-	line-height: 18px;
-	text-transform:none;
-}
-
-body.node.home div#node-news div.slder_container div.slder_slide div.post h3 a,
-body.home div#main div.learn div.slder_container div.slder_slide div.post h3 a {
-    font-size: 14px;
-    text-decoration: none;
-    color: #20B2B3;
-}
-
-body.node.home div#node-news div.slder_container div.slder_slide div.post h3 a:hover,
-body.home div#main div.learn div.slder_container div.slder_slide div.post h3 a:hover {
-    text-decoration: underline;
-}
+@import url("home/calls.css");
+@import url("home/feed.css");
+@import url("home/patrons.css");
+@import url("home/posts.css");
+@import url("home/promotes.css");
+@import url("home/stories.css");
 
 
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.embed,
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.image {
-	float:left;
-    width: 500px;
-    height: 285px;
-}
 
-body.node.home div#node-news div.slder_container div.slder_slide div.post div.author,
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.author {
-	float: left;
-    margin: -5px 0 0 20px;
-    width: 380px;
-	line-height: 12px;
-	text-transform:none;
-}
-
-body.node.home div#node-news div.slder_container div.slder_slide div.post div.author a,
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.author a {
-    font-size: 11px;
-    text-decoration: none;
-    color: #20B2B3;
-}
-
-body.node.home div#node-news div.slder_container div.slder_slide div.post div.author a:hover,
-body.home div#main div.learn div.slder_container div.slder_slide div.post div.author a:hover {
-    text-decoration: underline;
-}
-
-/* Hasta aqui las reglas para compartir estilos para blog en portada del nodo*/
-
-body.home div#main div.widget.projects {
-    overflow: hidden;
-    margin-left: -3%;    
-    margin-bottom: 15px;
-}
+/*En este archivo dejamos reglas que afectan a más de un módulo */
 
 body.home div#main div.widget.patrons,
 body.home div#main div.widget.calls,
@@ -201,182 +17,6 @@ body.home div#main div.widget.feed {
     position: relative;
 }
 
-body.home div#main div.widget.feed div.see_more {
-    margin-top: 16px;
-    text-align: right;
-}
-
-body.home div#main div.widget.feed div.see_more a {
-    text-transform: uppercase;
-    font-size: 0.9em;
-}
-
-body.home div#main div.widget.feed div.see_more a:hover {
-    color: #20B3B2;
-}
-
-/* Padrinos en portada*/
-body.node.home div#node-patrons div.patron,
-body.home div#main div.patron {
-    display: inline-block;
-    width: 185px;
-    position: relative;
-}
-body.node.home div#node-patrons div.patron + div.patron,
-body.home div#main div.patron + div.patron {
-    margin-left: 30px;
-}
-
-body.node.home div#node-patrons div.patron > a.expand,
-body.home div#main div.patron > a.expand {
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    width: 185px;
-    height: 100%;
-}
-
-body.node.home div#node-patrons div.patron > div.box,
-body.home div#main div.patron > div.box {
-    width: 185px;
-    height: 94px;
-	border-top: 1px solid #20B2B3;
-	border-bottom: 1px solid #20B2B3;
-}
-
-body.node.home div#node-patrons div.patron > div.box > div.avatar,
-body.home div#main div.patron > div.box > div.avatar {
-    width: 112px;
-    height: 74px;
-    margin: 10px auto;
-}
-
-body.node.home div#node-patrons div.patron > div.reco,
-body.home div#main div.patron > div.reco {
-    padding: 3px 0;
-    text-transform: uppercase;
-    font-size: 11px;
-    line-height: 17px;
-}
-
-body.node.home div#node-patrons div.patron > div.reco > span,
-body.home div#main div.patron > div.reco > span {
-	color: #20B2B3;
-}
-
-body.node.home div#node-patrons div.patron > div.reco > span.name,
-body.home div#main div.patron > div.reco > span.name {
-    font-size: 12px;
-	font-weight: bold;
-    text-transform: none !important;
-}
-/* fin patronos en portada*/
-
-/* Portada perfil patrono */
-body.home.patron div#sub-header > div{
-	margin:30px auto;
-}
-
-body.home.patron div#sub-header {
-    margin-bottom: 25px !important;
-}
-
-body.home.patron div#main div.patron-profile {
-	padding: 0px 50px;
-    margin-bottom: 32px;
-    display: block;
-}
-
-body.home.patron div#main div.patron-profile div.avatar {
-    float: left;
-    margin-right: 25px;
-}
-
-/* enlaces sociales */
-body.home.patron div#main div.patron-profile div.avatar ul{
-	overflow: hidden;
-    list-style: none;
-    padding: 0;
-    margin: 10px 0px;
-}
-
-body.home.patron div#main div.patron-profile div.avatar ul li{
-	margin-right: 4px;
-    display: inline-block;
-    overflow: hidden;
-    width: 20px;
-    height: 20px;
-}
-
-body.home.patron div#main div.patron-profile div.avatar ul li a{
-    background: no-repeat left center;
-    padding-left: 40px;
-    padding-top: 20px;
-    overflow: hidden;
-    line-height: 40px
-}
-
-body.home.patron div#main div.patron-profile div.avatar li a:hover{
-	opacity:0.7;
-	filter:alpha(opacity=70)
-}
-
-body.home.patron div#main div.patron-profile div.avatar li.twitter a {
-    background-image: url('/view/css/twitter.png');
-}
-
-body.home.patron div#main div.patron-profile div.avatar li.facebook a {
-    background-image: url('/view/css/facebook.png');
-}
-
-body.home.patron div#main div.patron-profile div.avatar li.identica a {
-    background-image: url('/view/css/identica.png');
-}
-
-body.home.patron div#main div.patron-profile div.avatar li.google a {
-    background-image: url('/view/css/google.png');
-}
-
-body.home.patron div#main div.patron-profile div.avatar li.linkedin a {
-    background-image: url('/view/css/linkedin.png');
-}
-/* Fin enlaces sociales */
-
-body.home.patron div#main div.patron-profile div.info {
-    float: left;
-    overflow: visible;
-    font-size: 16px;
-    color: #6A6B6E;
-    width: 590px;
-}
-
-body.home.patron div#main div.patron-profile div.info p {
-    padding: 0;
-    margin: 0px 0px 10px 0px;
-}
-
-body.home.patron div#main div.patron-profile div.info p a {
-    font-size: 16px !important;
-}
-
-body.home.patron div#main div.patron-profile div.info p a:hover {
-    color: #20B2B3 !important;
-}
-
-body.home.patron div#main div.patron-profile div.info ul {
-    list-style: none;
-    padding: 0;
-    margin: 10px 0px;
-}
-
-body.home.patron div#main div.patron-profile div.info ul li {
-}
-
-body.home.patron div#main div.patron-profile div.info ul li a {
-    text-decoration: none;
-    color: #20B2B3;
-    font-size: 12px;
-}
 
 /* Flechitas de convocatorias y padrinos en portada */
 div.patronrow a.prev,
@@ -394,50 +34,6 @@ div.callrow a.next {
     padding: 0;
 }
 
-/* esto es chungo de la muerte, falla en mac */
-/* Convocatorias */
-body.home div#main div.widget.calls div.callrow {
-    margin-bottom: 20px;
-}
-
-div#calls a.prev {
-    top: 121px;
-    left: -312px;
-}
-
-div#campaigns a.prev {
-    top: 121px;
-    left: -21px;
-}
-
-div#calls a.next,
-div#campaigns a.next {
-    left: 894px;
-    bottom: 137px;
-}
-/* fin chunguerias del position */
-
-/* patronos */
-div#slides_patrons div.slder_patrons,
-div#slides_patrons div.arrow-left,
-div#slides_patrons div.arrow-right {
-    float: left;
-}
-
-div#slides_patrons div.slder_patrons {
-	width: 845px;
-}
-
-div#slides_patrons div.arrow-left {
-    margin-left: -10px;
-    margin-right: 15px;
-    padding-top: 46px;
-}
-
-div#slides_patrons div.arrow-right {
-    margin-left: 0px;
-    padding-top: 46px;
-}
 
 div.patronrow a.prev,
 div.callrow a.prev {
