--- a/view/css/project/widget/media.css
+++ b/view/css/project/widget/media.css
@@ -16,3 +16,23 @@ div.widget.project-media > embed {
     max-width: 620px !important;
     height: 380px !important;
 }
+
+.video_button
+{
+
+    background-color: #58595B;
+    text-transform: uppercase;
+    border: none;    
+    cursor: pointer;
+    font-weight: normal;
+    color: white;
+    display: inline-block;
+    text-decoration: none;    
+    text-align: center;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #149290 url('button/aqua.png') repeat-x top;
+    padding: .6em 0.8em .5em;
+   
+}
