--- a/view/css/call/mobile.css
+++ b/view/css/call/mobile.css
@@ -1,5 +1,5 @@
 /* Mobile (max-width:400px) */
-#header, #footer {display:none;}
+           #footer {display:none;}
            
            div#main {
             width: 100%;
@@ -48,7 +48,7 @@
 
            
 
-           #social {
+           #social, div#side.twitter {
             display: none;
            }
 
@@ -145,4 +145,22 @@
             width:30% !important;
            }
 
+            #title {
+              margin-top: 6px;
+             }
 
+            #header{
+            position:relative;
+            }
+
+            div#super-header ul > li.campanya, div#super-header div#rightside ul.menu-right > li.login, div#super-header div#rightside ul.menu-right > li.capital {
+              display:none;
+            }
+
+            #super-header {
+              width: 100%;
+            }
+
+            div#super-header div#rightside {
+              width:73%;
+            }
