--- a/view/css/call/tablet.css
+++ b/view/css/call/tablet.css
@@ -1,5 +1,5 @@
 /* Tablet (min-width:400px max-width:600px) */
-            #header, #footer {display:none;}
+            #footer {display:none;}
                        
             div#main {
                  width: 100%;
@@ -32,7 +32,7 @@
                         margin-left: 22%;
                         max-width: 400px;
                        }
-            #social {
+            #social, div#side.twitter {
               display:none;
             }
 
@@ -96,4 +96,43 @@
            .freetext {
             margin-right: 5%;
            }
+
+           #header-responsive {
+            display: block;
+            width: 100%;
+            background: #B5DADC;
+            margin: 0;
+            height: 25px;
+            }
            
+            #title {
+              margin-top: 6px;
+             }
+
+            #header{
+            position:relative;
+            }
+
+            div#super-header ul > li.campanya, div#super-header div#rightside ul.menu-right > li.login {
+              display:none;
+            }
+
+            #super-header {
+              width: 100%;
+            }
+
+            
+            div#header div#menu {
+             width:27%;
+            }
+
+            div#super-header div#rightside ul.menu-right > li.capital {
+            padding-left: 1.3%;
+             float:left;
+             width:54%;
+             text-align: center;
+            }
+
+            div#super-header div#rightside {
+              width:73%;
+            }
