--- a/view/css/call/mobile.css
+++ b/view/css/call/mobile.css
@@ -164,3 +164,88 @@
             div#super-header div#rightside {
               width:73%;
             }
+
+             #social-responsive {
+              display: block;
+              width:100%;
+              background: #FFFFFF;
+              margin-top: 6px;
+            }
+
+            #social-responsive #social {
+              width: 100%;
+              background: #FFFFFF;
+              margin-bottom: 6px;
+
+            }
+
+            #social-logo ul {
+              width: 40%;
+              margin-left: 5%;
+            }
+
+            #social-logo a#capital {
+              width: 91px;
+              height: 122px;  
+              display: block;
+              text-indent: -10000px;
+              background: url('/view/css/call/logo-capital_medium.png') no-repeat;
+              float: left;
+              margin: 10px 0 0 0;
+            }
+
+            #social-logo li.email {
+              display: none;
+            }
+
+            #social-actions h2 {
+              display: none;
+            }
+
+            #social-actions .fb-like {
+              float:left !important;
+              clear:left;
+              margin-top: 10px;
+            }
+
+            div#header ul > li.dashboard {
+              display: none !important;
+              
+            }
+            #social-actions .twitter-share-button {
+              float:left;
+              margin-top: 10px;
+            }
+
+             #sponsors-responsive {
+              display: block;
+              width: 100%;
+              margin-top: 6px; 
+              margin-bottom: 10px; 
+                     
+            }
+
+            #supporters-sponsors .title {
+              margin-left: 15px;
+              color: #666;
+              font-size: 16px;
+
+            }
+
+            .sponsor{
+              float:left; 
+              width:40%;
+              margin-right: 10px;
+              margin-top: 20px;
+            }
+            .float-none {
+              float:none !important;
+            }
+
+            #social-logo li.linkedin {
+              margin-top: 5px;
+            }
+
+            #call-supporters {
+              margin-bottom: 15px;
+            }
