Margins optimizados en sponsors.

--- a/view/css/call/tablet.css
+++ b/view/css/call/tablet.css
@@ -192,6 +192,7 @@
             .sponsor{
             float:left; 
             width:30%;
+            margin-right: 3%;
             }
 
             #social-actions .fb-like {
