--- a/view/css/call/tablet.css
+++ b/view/css/call/tablet.css
@@ -174,6 +174,10 @@
               display: none !important;
             }
 
+             .float-none {
+              float:none !important;
+            }
+
             #sponsors-responsive {
               display: block;
               width: 100%;
@@ -197,4 +201,30 @@
 
             #social-actions .fb-like {
               float: left !important;
+            }
+
+            #social-actions  {
+              margin-top: 30px;
+            }
+
+            #supporters-sponsors #post div.image {
+            width:35%;
+            }
+
+
+            #supporters-sponsors #post div.content {
+            width: 60%;
+            margin-left: 0;
+            }
+
+            #supporters-sponsors #post {
+            width: 96.6%;
+            padding: 1% 0 0 1%;
+            max-width: 750px;
+            }
+
+            #supporters-sponsors #post h3 a {
+            
+            width: 100%;
+
             }
