Margins co-financiadores

--- a/view/css/call/mobile.css
+++ b/view/css/call/mobile.css
@@ -258,5 +258,9 @@
             }
 
             #supporters-sponsors #supporters {
-              width: 100%;
+              width: 95%;
+            }
+
+            #supporters-sponsors .title {
+              margin-left:0px;
             }
